# riscv-emulator

./: CMakeLists.txt  README.md  project-desgin
AssemblyCode/: README.md  U_type_test.s  add.s  array_sum.s  b.s  build.sh  ecall.s  i_type_test.s  jal.s  jslir_test.s  karam.s  l_type_test.s  organize.sh  trap_handler.s
AssemblyCode/Ccode/: test.c  test.elf
AssemblyCode/asm/: add.s  array_sum.s  chain.s  ecall.s  jal.s  ori.s  s_type_test.s  stack_test.s  trap_handler.s
AssemblyCode/elf/: array_sum.elf  ecall.elf  jal.elf  stack_test.elf  test.elf  trap_handler.elf
CPU/include/: DebugConfig.h
CPU/include/Core/: ALU.h
CPU/include/InstructionFormat/: BType.h  IType.h  JType.h  LType.h  SType.h
CPU/include/REGS/: CSR.h  CSRAddr.h  Regs.h
CPU/include/Stages/: ExecuteStage.h  MemoryStage.h  Stage.h  WritebackStage.h
CPU/include/Utils/: ALUOp.h
CPU/src/: ALU.cpp  BranchComp.cpp
CPU/src/InstructionFormat/: BType.cpp  RTpe.cpp
CPU/src/Stages/: DecodeStage.cpp  FetchStage.cpp  WritebackStage.cpp
CPU/src/Utils/: DecoderUtiles.cpp
CPU/tests/InstType_test/: test_B-Type.cpp  test_R-Type.cpp  test_SL-Type.cpp  test_U-Type.cpp
CPU/tests/memory_test/: test_dmem.cpp  test_memory_bus.cpp  test_memory_general.cpp
CPU/tests/regs_test/: test_regs.cpp
CPU/tests/stages_test/: test_fetch.cpp
OS/: crt0.s  link.ld
hardware/include/Memory/: DMEM.h  memory.h
hardware/src/Memory/: IMEM.cpp  memory.cpp
include/: ControlLogic.h  DebugConfig.h  RISCV.h  memory.h
include/Core/: BranchComp.h
include/InstructionFormat/: CSRType.h  InstructionFormat.h  RType.h  SystemType.h  UType.h
include/Memory/: DMEM.h  IMEM.h  MemoryBus.h  MemoryLayout.h  Page.h  memory.h
include/REGS/: CSR.h
include/Stages/: DecodeStage.h  ExecuteStage.h  FetchStage.h
include/Utiles/: DecoderUtiles.h
include/Utils/: ALUOp.h  DecoderUtils.h
riscv-emulator/include/: Regs.h  stage.h
scripts/: build_and_run.sh
src/: DebugConfig.cpp  RISCV.cpp  main.cpp  regs.cpp
src/Core/: ALU.cpp
src/InstructionFormat/: CSRType.cpp  IType.cpp  JType.cpp  LType.cpp  RTpe.cpp  SType.cpp  SystemType.cpp  UType.cpp
src/Memory/: DMEM.cpp  IMEM.cpp  MemoryBus.cpp  memory.cpp
src/REGS/: CSR.cpp  Regs.cpp
src/Stages/: DecodeStage.cpp  ExecuteStage.cpp  MemoryStage.cpp  WritebackStage.cpp
src/Utiles/: DecoderUtiles.cpp
src/Utils/: DecoderUtiles.cpp
tests/InstType_test/: test_B-Type.cpp  test_I-Type.cpp  test_R-Type.cpp  test_SL-Type.cpp  test_U-Type.cpp
tests/memory_test/: test_dmem.cpp  test_imem.cpp  test_memory_general.cpp  test_memory_regs_mix.cpp
tests/regs_test/: test_regs.cpp
tests/stages_test/: test_fetch.cpp  test_fetch_decode.cpp  test_fetch_decode_execute.cpp
tests/unitTest/: test_sum_array.cpp
